--- a/Sales Manager/Sales Manager.csproj
+++ b/Sales Manager/Sales Manager.csproj
@@ -39,7 +39,7 @@
     <ApplicationIcon>Sales Manager.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>Sales Manager.pfx</AssemblyOriginatorKeyFile>
