Fixed an issue where renewed support amount was counted as a received amount instead of support amount.

--- a/Sales Manager/Sales Manager.csproj
+++ b/Sales Manager/Sales Manager.csproj
@@ -171,6 +171,9 @@
     <Compile Include="AddProduct.Designer.cs">
       <DependentUpon>AddProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="FilterTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="GetSales.cs">
       <SubType>Form</SubType>
     </Compile>
