--- a/Sales Manager/packages.config
+++ b/Sales Manager/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autoupdater.NET.Official" version="1.4.7" targetFramework="net452" />
+  <package id="Costura.Fody" version="1.6.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Fody" version="2.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net452" />
   <package id="Microsoft.Data.Sqlite" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.2" targetFramework="net452" />
